# biar

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
biar/: __init__.py  __metadata__.py  errors.py  model.py  services.py  user_agents.py
tests/unit/biar/: test_services.py
